--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8.12) 
 include(cmake/functions.cmake)
 include(cmake/glibc_cxx11_abi_detection.cmake)
+include(cmake/silence_find_pathprogram.cmake)
 
 ### Different Configuration Types (Debug release)
 
