cmake: rename config_ to require_
since thats actually a more meaningful namingscheme

--- a/inexor/net/CMakeLists.txt
+++ b/inexor/net/CMakeLists.txt
@@ -1,10 +1,10 @@
 declare_module(net .)
 add_lib(net)
 
-config_asio(module_net NOLINK)
-config_cxx11_abi(module_net NOLINK)
+require_asio(module_net NOLINK)
+require_cxx11_abi(module_net NOLINK)
 
-function(config_net targ)
+function(require_net targ)
   message(STATUS "Configuring ${targ} with net")
   if (";${ARGN};" MATCHES ";NOLINK;")
     set(NOLINK "NOLINK")
@@ -12,6 +12,6 @@ function(config_net targ)
 
   target_link_libs(${targ} module_net ${NOLINK})
 
-  config_cxx11_abi(module_net ${NOLINK})
-  config_asio(${targ} ${NOLINK})
+  require_cxx11_abi(module_net ${NOLINK})
+  require_asio(${targ} ${NOLINK})
 endfunction()
