--- a/inexor/rpc/CMakeLists.txt
+++ b/inexor/rpc/CMakeLists.txt
@@ -33,13 +33,13 @@ set(RPC_MODULE_SOURCES ${RPC_MODULE_SOURCES} ${protoc_out_cc}
   CACHE INTERNAL "")
 
 add_lib(rpc)
-config_net(module_rpc NOLINK)
-config_sdl(module_rpc NOLINK)
-config_enet(module_rpc NOLINK)
-config_protobuf(module_rpc NOLINK)
-config_cxx11_abi(module_rpc NOLINK)
+require_net(module_rpc NOLINK)
+require_sdl(module_rpc NOLINK)
+require_enet(module_rpc NOLINK)
+require_protobuf(module_rpc NOLINK)
+require_cxx11_abi(module_rpc NOLINK)
 
-function(config_rpc targ)
+function(require_rpc targ)
   message(STATUS "Configuring ${targ} with rpc")
   if (";${ARGN};" MATCHES ";NOLINK;")
     set(NOLINK "NOLINK")
@@ -48,9 +48,9 @@ function(config_rpc targ)
   add_dependencies(${targ} run_protoc)
   target_link_libs(${targ} ${NOLINK} module_rpc module_net module_util)
 
-  config_protobuf(${targ})
-  config_net(${targ})
-  config_enet(${targ})
-  config_cxx11_abi(${targ} NOLINK)
+  require_protobuf(${targ})
+  require_net(${targ})
+  require_enet(${targ})
+  require_cxx11_abi(${targ} NOLINK)
 endfunction()
 
