--- a/inexor/server/CMakeLists.txt
+++ b/inexor/server/CMakeLists.txt
@@ -17,12 +17,12 @@ add_definitions(-DSERVER -DSTANDALONE)
 
 add_app(${SERVER_BINARY} ${SERVER_SOURCES})
 
-config_cxx11_abi(${SERVER_BINARY})
-config_threads(${SERVER_BINARY})
-config_zlib(${SERVER_BINARY})
-config_enet(${SERVER_BINARY})
-config_net(${SERVER_BINARY})
-config_rpc(${SERVER_BINARY})
-config_util(${SERVER_BINARY})
-config_crashreporter(${SERVER_BINARY})
-config_filesystem(${SERVER_BINARY})
+require_cxx11_abi(${SERVER_BINARY})
+require_threads(${SERVER_BINARY})
+require_zlib(${SERVER_BINARY})
+require_enet(${SERVER_BINARY})
+require_net(${SERVER_BINARY})
+require_rpc(${SERVER_BINARY})
+require_util(${SERVER_BINARY})
+require_crashreporter(${SERVER_BINARY})
+require_filesystem(${SERVER_BINARY})
