--- a/inexor/util/CMakeLists.txt
+++ b/inexor/util/CMakeLists.txt
@@ -3,11 +3,11 @@
 declare_module(util .)
 
 add_lib(util)
-config_boost_thread(module_util NOLINK)
-config_boost_random(module_util NOLINK)
-config_cxx11_abi(module_util NOLINK)
+require_boost_thread(module_util NOLINK)
+require_boost_random(module_util NOLINK)
+require_cxx11_abi(module_util NOLINK)
 
-function(config_util targ)
+function(require_util targ)
   message(STATUS "Configuring ${targ} with util")
   if (";${ARGN};" MATCHES ";NOLINK;")
     set(NOLINK "NOLINK")
@@ -15,7 +15,7 @@ function(config_util targ)
 
   target_link_libs(${targ} module_util ${NOLINK})
 
-  config_boost_thread(${targ} ${NOLINK})
-  config_boost_random(${targ} ${NOLINK})
-  config_cxx11_abi(${targ} ${NOLINK})
+  require_boost_thread(${targ} ${NOLINK})
+  require_boost_random(${targ} ${NOLINK})
+  require_cxx11_abi(${targ} ${NOLINK})
 endfunction()
