--- a/inexor/client/CMakeLists.txt
+++ b/inexor/client/CMakeLists.txt
@@ -62,15 +62,15 @@ add_definitions(-DCLIENT)
 
 add_app(${CLIENT_BINARY} ${CLIENT_SOURCES})
 
-config_cxx11_abi(${CLIENT_BINARY})
-config_threads(${CLIENT_BINARY})
-config_crashreporter(${CLIENT_BINARY})
-config_sdl(${CLIENT_BINARY})
-config_zlib(${CLIENT_BINARY})
-config_enet(${CLIENT_BINARY})
-config_net(${CLIENT_BINARY})
-config_rpc(${CLIENT_BINARY})
-config_util(${CLIENT_BINARY})
-config_ui(${CLIENT_BINARY})
-config_texture(${CLIENT_BINARY})
-config_filesystem(${CLIENT_BINARY})
+require_cxx11_abi(${CLIENT_BINARY})
+require_threads(${CLIENT_BINARY})
+require_crashreporter(${CLIENT_BINARY})
+require_sdl(${CLIENT_BINARY})
+require_zlib(${CLIENT_BINARY})
+require_enet(${CLIENT_BINARY})
+require_net(${CLIENT_BINARY})
+require_rpc(${CLIENT_BINARY})
+require_util(${CLIENT_BINARY})
+require_ui(${CLIENT_BINARY})
+require_texture(${CLIENT_BINARY})
+require_filesystem(${CLIENT_BINARY})
