--- a/inexor/master/CMakeLists.txt
+++ b/inexor/master/CMakeLists.txt
@@ -17,12 +17,12 @@ add_definitions(-DSERVER -DSTANDALONE)
 
 add_app(${MASTER_BINARY} ${MASTER_SOURCES} CONSOLE_APP)
 
-config_cxx11_abi(${MASTER_BINARY})
-config_threads(${MASTER_BINARY})
-config_zlib(${MASTER_BINARY})
-config_enet(${MASTER_BINARY})
-config_net(${MASTER_BINARY})
-config_rpc(${MASTER_BINARY})
-config_util(${MASTER_BINARY})
-config_crashreporter(${MASTER_BINARY})
-config_filesystem(${MASTER_BINARY})
+require_cxx11_abi(${MASTER_BINARY})
+require_threads(${MASTER_BINARY})
+require_zlib(${MASTER_BINARY})
+require_enet(${MASTER_BINARY})
+require_net(${MASTER_BINARY})
+require_rpc(${MASTER_BINARY})
+require_util(${MASTER_BINARY})
+require_crashreporter(${MASTER_BINARY})
+require_filesystem(${MASTER_BINARY})
