--- a/inexor/ui/CMakeLists.txt
+++ b/inexor/ui/CMakeLists.txt
@@ -12,11 +12,11 @@ declare_module(ui .)
 add_lib(ui)
 
 # Pulled in by including cube.h
-config_enet(module_ui NOLINK)
-config_sdl(module_ui NOLINK)
-config_cxx11_abi(module_ui NOLINK)
+require_enet(module_ui NOLINK)
+require_sdl(module_ui NOLINK)
+require_cxx11_abi(module_ui NOLINK)
 
-function(config_ui targ)
+function(require_ui targ)
   message(STATUS "Configuring ${targ} with ui")
   if (";${ARGN};" MATCHES ";NOLINK;")
     set(NOLINK "NOLINK")
@@ -25,7 +25,7 @@ function(config_ui targ)
   include_directories(${CEF_INCLUDE_DIRS})
   target_link_libs(${targ} module_ui ${CEF_LIBS} module_util ${NOLINK})
 
-  config_enet(${targ} ${NOLINK})
-  config_sdl(${targ} ${NOLINK})
-  config_cxx11_abi(${targ} ${NOLINK})
+  require_enet(${targ} ${NOLINK})
+  require_sdl(${targ} ${NOLINK})
+  require_cxx11_abi(${targ} ${NOLINK})
 endfunction()
