--- a/inexor/crashreporter/CMakeLists.txt
+++ b/inexor/crashreporter/CMakeLists.txt
@@ -4,7 +4,7 @@ add_lib(crashreporter)
 require_cxx11_abi(${targ} NOLINK)
 
 function(require_crashreporter targ)
-  message(STATUS "Configuring ${targ} with crashreporter")
+  message(STATUS "Configuring ${targ} with module_crashreporter")
   if (";${ARGN};" MATCHES ";NOLINK;")
     set(NOLINK "NOLINK")
   endif()
