cmake: add -DBUILD_ALL=1 option to cmake and use it in the ci

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ before_build:
   # We generate project files for Visual Studio 13 only atm.
   - cmd: if "%platform%"=="Win32" set "CMAKE_GENERATOR_NAME=Visual Studio 14 2015"
   - cmd: if "%platform%"=="x64"   set "CMAKE_GENERATOR_NAME=Visual Studio 14 2015 Win64"
-  - cmd: cmake -G "%CMAKE_GENERATOR_NAME%" -DCMAKE_BUILD_TYPE=%configuration% ..
+  - cmd: cmake -G "%CMAKE_GENERATOR_NAME%" -DCMAKE_BUILD_TYPE=%configuration% -DBUILD_ALL=1 ..
 
 build:
 # cmakes placeholder project to silence appveyor complaining about us using the cli
