--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ pids
 
 # Dependency directories
 node/node_modules
+node/public/bower_components
 node/assets/bower_components
 node/assets/build
 node/jspm_packages
