--- a/node/package.json
+++ b/node/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bower": "^1.7.7",
     "bunyan": "^1.7.0",
+    "grpc": "^0.14.1",
     "protobufjs": "^5.0.1",
     "restify": "^4.0.4",
     "uuid": "^2.0.1",
@@ -30,6 +31,6 @@
     "jsdoc": "^3.4.0"
   },
   "engines": {
-      "node": ">= 4.4.4"
+    "node": ">= 4.4.4"
   }
 }
