--- a/node/bower.json
+++ b/node/bower.json
@@ -2,9 +2,7 @@
   "name": "Inexor_IPC_Client",
   "description": "Scripting in node.js for Inexor",
   "main": "index.js",
-  "authors": [
-    "Fohlen <lennard@berger.work>"
-  ],
+  "maintainer": "Andreas Schaeffer"
   "license": "zlib",
   "homepage": "https://github.com/inexor-game/code",
   "moduleType": [],
