--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,9 +31,9 @@ before_build:
   - cmd: md build
   - cmd: cd build
   # We generate project files for Visual Studio 13 only atm.
-  - cmd: if "%platform%"=="Win32" set "CMAKE_GENERATOR_NAME=Visual Studio 14 2015"
-  - cmd: if "%platform%"=="x64"   set "CMAKE_GENERATOR_NAME=Visual Studio 14 2015 Win64"
-  - cmd: cmake -G "%CMAKE_GENERATOR_NAME%" -DCMAKE_BUILD_TYPE=%configuration% -DBUILD_ALL=1 ..
+  - cmd: if "%platform%"=="Win32" ( set "CMAKE_GENERATOR_NAME=Visual Studio 14 2015" && set "config_cmake_targets=-DBUILD_GLUEGEN=0 -DBUILD_MASTER=1 -DBUILD_SERVER=1 -DBUILD_CLIENT=1" )
+  - cmd: if "%platform%"=="x64" ( set "CMAKE_GENERATOR_NAME=Visual Studio 14 2015 Win64" && set "config_cmake_targets=-DBUILD_ALL=1" )
+  - cmd: cmake -G "%CMAKE_GENERATOR_NAME%" -DCMAKE_BUILD_TYPE=%configuration% %config_cmake_targets% ..
 
 build:
 # cmakes placeholder project to silence appveyor complaining about us using the cli
