[node] Fixes /treeui path. Enhance README.md and bower.json, compile docs against 0.8. Release ready!

--- a/node/package.json
+++ b/node/package.json
@@ -14,8 +14,8 @@
     "type": "git",
     "url": "git@github.com:inexor-game/code.git"
   },
-  "maintainer": "Lennard Berger <lennard@berger.work>",
-  "license": "zlib",
+  "maintainer": "Lennard Berger <fohlen@darkkeepers.dk>",
+  "license": "Zlib",
   "bugs": {
     "url": "https://github.com/inexor-game/code/issues"
   },
