[node] Enhance README.md and bower.json, compile docs against 0.8

--- a/node/bower.json
+++ b/node/bower.json
@@ -1,9 +1,12 @@
 {
   "name": "Inexor_IPC_Client",
   "description": "Scripting in node.js for Inexor",
+  "authors": [
+	"Andreas Schaeffer",
+	"Lennard Berger <fohlen@darkkeepers.dk"
+  ],
   "main": "index.js",
-  "maintainer": "Andreas Schaeffer",
-  "license": "zlib",
+  "license": "Zlib",
   "homepage": "https://github.com/inexor-game/code",
   "moduleType": [],
   "private": true,
