--- a/node/app/plugins/rest/package.json
+++ b/node/app/plugins/rest/package.json
@@ -12,8 +12,9 @@
   "bugs": {
     "url": "https://github.com/inexor-game/code/issues"
   },
-  "homepage": "https://github.com/inexor-game/inexor/node",
+  "homepage": "https://github.com/inexor-game/inexor/code/node",
   "engines": {
     "node": ">= 4.4.4"
-  }
+  },
+  "private": true
 }
